--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 
 </head>
 <body>
-    <div class="container">
+
+<div class="container">
+
+    <div class="points">
+        <h1>Pontos : &nbsp;</h1>
+        <h1 id="points"></h1>
+
+        <h1> &nbsp; &nbsp; Clicks : &nbsp;</h1>
+        <h1 id="clicks"></h1>
+    </div>
+
+    <div class="cardContainer">
  
 
     </div>
-    <h1>Pontos:</h1>
-    <div id="points">
-        
-    </div>
+</div>
+    
     <script src="js/js.js"></script>
 </body>
 </html>
